# git-remote-iroh

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: bridge.rs  helper.rs  main.rs  proto.rs  serve.rs  ticket.rs
tests/: integration.rs
