[package]
name = "git-remote-iroh"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "git remote helper for direct p2p fetch/push between repositories over iroh"
license = "Apache-2.0"
repository = "https://github.com/magik6k/git-remote-iroh"
readme = "README.md"
keywords = ["git", "p2p", "iroh", "remote-helper", "holepunching"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
data-encoding = "2"
iroh = { version = "1", default-features = false, features = ["tls-ring"] }
iroh-tickets = "1"
noq = "1"
rand = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
